Change static data to chinese

--- a/templates/home/about-us.html
+++ b/templates/home/about-us.html
@@ -54,7 +54,7 @@
 
     <div class="about-page-oem"  data-aos="zoom-in">
         <h4>{{about.oem_odm_heading}}</h4>
-        <a href="{% url 'oemodm' %}">{{sitedata.site_name}} OEM&ODM</a>
+        <a href="{% url 'oemodm' %}">{{sitedata.site_name}} OEM 和 ODM</a>
     </div>
 
     <div class="about-page-story"  data-aos="zoom-in">
