--- a/templates/home/faqs.html
+++ b/templates/home/faqs.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 
-{% block title %} FAQs - {{sitedata.site_name}}{% endblock title %}
+{% block title %} 常见问题解答 - {{sitedata.site_name}}{% endblock title %}
 
 {% load static %}
 
@@ -8,9 +8,9 @@
 {% block meta_tags %}
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 <meta name="description" content="{{sitedata.search_desc}}">
-<meta name="keywords" content="FAQs, {{sitedata.search_key}}">
+<meta name="keywords" content="常见问题解答, {{sitedata.search_key}}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="FAQs - {{sitedata.site_name}}">
+<meta property="og:title" content="常见问题解答 - {{sitedata.site_name}}">
 <meta property="og:description" content=" {{sitedata.search_desc}}">
 {% endblock meta_tags %}
 
