--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   {% load static %}
@@ -15,12 +15,10 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <!--==Fav-icon=========================-->
   <link rel="shortcut icon" href="{{sitedata.fav_icon.url}}" />
-  <!--==poppins===========================-->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+  <!--==Noto===========================-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
    <!--==Using-Font-Awesome-for-Icons=====-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <!--==aos=============================-->
@@ -51,7 +49,7 @@
         <label for="searchshow" class="close-btn-search"><i class="fa-solid fa-xmark"></i></label>
           <div class="header-search">
           <!--input-->
-          <input type="text" name="search" value="{{search}}" id="search" placeholder="SEARCH YOUR WATCH..." required/>
+          <input type="text" name="search" value="{{search}}" id="search" placeholder="搜索您的手表..." required/>
           <!--button-->
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
@@ -87,11 +85,11 @@
               <!--search-->
               <label for="searchshow" style="color:#ffffff; cursor: pointer;"><i class="fa-solid fa-magnifying-glass"></i></label>
               <div class="language-dropdown-container language-dropdown-container2">
-                <label for="language-dropdown-check" style="cursor: pointer; color:#ffffff; margin-left:14px; font-weight: 500; font-size: 0.8rem; user-select:none;">English/Chinese</label>
+                <label for="language-dropdown-check" style="cursor: pointer; color:#ffffff; margin-left:14px; font-weight: 500; font-size: 0.8rem; user-select:none;">中国人</label>
                 <input type="checkbox" id="language-dropdown-check" value="none">
                 <div class="language-dropdown">
-                  <a href="/" aria-label="Go to english version">English</a>
-                  <a href="https://www.bro-watch.cn">Chinese</a>
+                  <a href="/">中国人</a>
+                  <a href="https://swoggerwatch.com" aria-label="Go to english version">English</a>
                 </div>
               </div>
             </div>
@@ -120,8 +118,8 @@
               <label for="language-dropdown-check2" style="cursor: pointer; color:#222222; margin-left:14px; font-weight: 600; font-size: 0.8rem; user-select:none;">EN/CN <i class="fa-solid fa-caret-down"></i></label>
               <input type="checkbox" id="language-dropdown-check2" value="none">
               <div class="language-dropdown">
-                <a href="/" aria-label="Go to english version">English</a>
-                <a href="https://www.bro-watch.cn">Chinese</a>
+                <a href="/">中国人</a>
+                <a href="https://swoggerwatch.com" aria-label="前往英文版">English</a>
               </div>
             </div>
 
@@ -130,9 +128,9 @@
             <!--**menu***********-->
             <div class="menu-container">
             <ul class="menu">
-              <li><a href="/" class="{% if request.path == '/' %}active{% endif %}" aria-label="go to home page">Home</a></li>
+              <li><a href="/" class="{% if request.path == '/' %}active{% endif %}" aria-label="go to home page">家</a></li>
               <li class="nav-drop-down">
-                <div class="show-drop-collections"><a href="{% url 'allproducts' %}">Product</a> <label for="show-drop-collections"><i class="fa-solid fa-chevron-down"></i></label></div>
+                <div class="show-drop-collections"><a href="{% url 'allproducts' %}">产品</a> <label for="show-drop-collections"><i class="fa-solid fa-chevron-down"></i></label></div>
                 <div class="drop-collections" id="drop-collections">
                   <strong class="drop-collections-heading">{{sitedata.nav_products_section_heading}}</strong>  
                   <div class="drop-collections-menu">
@@ -212,7 +210,7 @@
         <div class="footer-link-box" data-aos="fade-right">
             <strong>{{footer_heading.main_heading}}</strong>
             <ul>
-              <li><a href="/" aria-label="go to home page">Home</a></li>
+              <li><a href="/" aria-label="go to home page">家</a></li>
               {% for menu in sitedata.menu_list.all  %}
                 <li><a href="{{menu.link}}" aria-label="go to {{menu.name}}">{{menu.name}}</a></li>
               {% endfor %}           </ul>
@@ -255,12 +253,12 @@
     <div class="footer-bottom">
 
         <div class="footer-bottom-link">
-          <a href="/privacy-policy">Privacy</a>
-          <a href="/terms-and-conditions">Terms</a>
-          <a href="/disclaimer">Disclaimer</a>
+          <a href="/privacy-policy">隐私</a>
+          <a href="/terms-and-conditions">条款</a>
+          <a href="/disclaimer">免责声明</a>
         </div>
 
-        <span class="footer-owner">Made By {{sitedata.site_name}}</span>
+        <span class="footer-owner">制作者 {{sitedata.site_name}}</span>
         <span class="copyright">© {{sitedata.copyright}} - {{sitedata.site_name}}</span>
     </div>
 
