--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'poppins';
+    font-family: 'Noto Sans TC';
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
