--- a/templates/home/all-news.html
+++ b/templates/home/all-news.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 
-{% block title %} News - {{sitedata.site_name}}{% endblock title %}
+{% block title %} 消息 - {{sitedata.site_name}}{% endblock title %}
 
 {% load static %}
 
@@ -8,9 +8,9 @@
 {% block meta_tags %}
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 <meta name="description" content="{{sitedata.search_desc}}">
-<meta name="keywords" content="News {{sitedata.search_key}}">
+<meta name="keywords" content="消息 {{sitedata.search_key}}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="News - {{sitedata.site_name}}">
+<meta property="og:title" content="消息 - {{sitedata.site_name}}">
 <meta property="og:description" content=" {{sitedata.search_desc}}">
 {% endblock meta_tags %}
 
@@ -18,7 +18,7 @@
 {% block article_content %}
 <div class="category-banner">
     <img src="{% static 'images/news-banner.jpg' %}" alt="News">
-    <h1>News</h1>
+    <h1>消息</h1>
 </div>
 <div class="main-product-container">
 
@@ -26,7 +26,7 @@
 
         <div class="sidebar-category">
             <div class="sidebar-category-heading">
-                <strong>Recent News</strong>  
+                <strong>最新消息</strong>  
                 <i class="fa-solid fa-bars"></i>
             </div>
                 <ul class="sidebar-category-menu">
@@ -40,15 +40,15 @@
             <div class="sidebar-contact-box-icon">
                 <i class="fa-solid fa-headset"></i>
             </div>
-            <strong>WE CAN HELP YOU</strong>
-            <p>You can contact us at any way that is convenient for you. Our staffs are always online via E-mail and SMS.</p>
-            <a href="{% url 'contact' %}" aria-label="Contact Us">Contact Us</a>
+            <strong>我们可以帮助您</strong>
+            <p>您可以通过任何您方便的方式联系我们。我们的员工始终通过电子邮件和短信在线。</p>
+            <a href="{% url 'contact' %}" aria-label="Contact Us">联系我们</a>
         </div>
 
         <div class="sidebar-recent-product">
             <div class="sidebar-recent-heading">
                 <i class="fa-solid fa-bars-progress"></i>
-                <strong>New Products</strong>
+                <strong>新产品</strong>
             </div>
             {% for product in recentProduct|slice:"3"  %}
             <div class="sidebar-recent-box">
@@ -69,7 +69,7 @@
         {% if group.heading %}
         <h3>{{group.heading}}</h3>
         {% else %}
-        <h3>All News</b></h3>
+        <h3>所有新闻</b></h3>
         {% endif %}
     </div>
 
@@ -91,14 +91,14 @@
                 <!--details-->
                 <p>{{news.meta_desc}}</p>
                 <!--read more-->
-                <a class="product-text-read" href="{% url 'newspost' news.slug %}">Read More</a>
+                <a class="product-text-read" href="{% url 'newspost' news.slug %}">阅读更多</a>
             </div>
         </div><!--box-end-->
         {% endfor %}
     </div>
 
     {% if news|length < 1 %} <div class="search-not-found">
-        <span style="color:red; font-size:0.8rem;">*No products added for this category yet</span>
+        <span style="color:red; font-size:0.8rem;">*尚未添加新闻</span>
     {% endif %}
     
 
@@ -106,11 +106,11 @@
 <div class="page-number">
     {% if pagination.has_previous %}
     <a href="{% url 'news' %}?page=1" aria-label="go to first page">&laquo;</a>
-    <a href="{% url 'news' %}?page={{pagination.previous_page_number}}" aria-label="go to previous page">Previous</a>
+    <a href="{% url 'news' %}?page={{pagination.previous_page_number}}" aria-label="go to previous page">以前的</a>
     {% endif %}
 
     {% if pagination.has_next %}    
-    <a href="{% url 'news' %}?page={{pagination.next_page_number}}" aria-label="go to next page">Next</a>
+    <a href="{% url 'news' %}?page={{pagination.next_page_number}}" aria-label="go to next page">下一个</a>
     <a href="{% url 'news' %}?page={{pagination.paginator.num_pages}}" aria-label="go to last page">&raquo;</a>
     {% endif %}
 </div>
