--- a/templates/home/category-product.html
+++ b/templates/home/category-product.html
@@ -26,7 +26,7 @@
 
         <div class="sidebar-category">
             <div class="sidebar-category-heading">
-                <strong>Product Category</strong>  
+                <strong>产品类别</strong>  
                 <i class="fa-solid fa-bars"></i>
             </div>
                 <ul class="sidebar-category-menu">
@@ -40,15 +40,15 @@
             <div class="sidebar-contact-box-icon">
                 <i class="fa-solid fa-headset"></i>
             </div>
-            <strong>WE CAN HELP YOU</strong>
-            <p>You can contact us at any way that is convenient for you. Our staffs are always online via E-mail and SMS.</p>
-            <a href="{% url 'contact' %}" aria-label="Contact Us">Contact Us</a>
+            <strong>我们可以帮助您</strong>
+            <p>您可以通过任何您方便的方式联系我们。我们的员工始终通过电子邮件和短信在线。</p>
+            <a href="{% url 'contact' %}" aria-label="Contact Us">联系我们</a>
         </div>
 
         <div class="sidebar-recent-product">
             <div class="sidebar-recent-heading">
                 <i class="fa-solid fa-bars-progress"></i>
-                <strong>New Products</strong>
+                <strong>新产品</strong>
             </div>
             {% for product in recentProduct|slice:"3"  %}
             <div class="sidebar-recent-box">
@@ -69,7 +69,7 @@
         {% if group.heading %}
         <h3>{{group.heading}}</h3>
         {% else %}
-        <h3>Category: <b>{{categoryName}}</b></h3>
+        <h3>类别: <b>{{categoryName}}</b></h3>
         {% endif %}
     </div>
 
@@ -95,14 +95,14 @@
                 <!--details-->
                 <p>{{product.details}}</p>
                 <!--price-->
-                <span class="p-box-price">Price: {{product.price}}$</span>
+                <span class="p-box-price">价格: {{product.price}}$</span>
             </div>
         </div><!--box-end-->
         {% endfor %}
     </div>
 
     {% if products|length < 1 %} <div class="search-not-found">
-        <span style="color:red; font-size:0.8rem;">*No products added for this category yet</span>
+        <span style="color:red; font-size:0.8rem;">*尚未添加该类别的产品</span>
     {% endif %}
     
 
@@ -110,11 +110,11 @@
 <div class="page-number">
     {% if pagination.has_previous %}
     <a href="{% url 'category_detail' categoryObj.id %}?page=1" aria-label="go to first page">&laquo;</a>
-    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.previous_page_number}}" aria-label="go to previous page">Previous</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.previous_page_number}}" aria-label="go to previous page">以前的</a>
     {% endif %}
 
     {% if pagination.has_next %}    
-    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.next_page_number}}" aria-label="go to next page">Next</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.next_page_number}}" aria-label="go to next page">下一个</a>
     <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.paginator.num_pages}}" aria-label="go to last page">&raquo;</a>
     {% endif %}
 </div>
