--- a/templates/home/static-post.html
+++ b/templates/home/static-post.html
@@ -26,7 +26,7 @@
     <div class="static-container">
 
         <div class="static-title">
-            <span class="static-page-title-label">Title</span>
+            <span class="static-page-title-label">标题</span>
             <h1>{{staticpost.title}}</h1>
         </div>
 
