--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -91,7 +91,7 @@
                 <input type="checkbox" id="language-dropdown-check" value="none">
                 <div class="language-dropdown">
                   <a href="/" aria-label="Go to english version">English</a>
-                  <a href="https://www.bro-watch.cn">Chinese</a>
+                  <a href="https://swoggerwatch.cn">Chinese</a>
                 </div>
               </div>
             </div>
